Name:                ola-dmx
Version:             0.0.1
Synopsis:            DMX512 control with OLA (Open Lighting Architecture)
Description:         DMX512 control with OLA (Open Lighting Architecture)
License:             BSD3
License-file:        LICENSE
Author:              Balazs Komuves
Copyright:           (c) 2017-2018 Balazs Komuves
Maintainer:          bkomuves (plus) hackage (at) gmail (dot) com
homepage:            https://github.com/bkomuves/ola-dmx
Stability:           Experimental
Category:            System
Tested-With:         GHC == 8.0.2, GHC == 8.6.5
Cabal-Version:       >= 1.2
Build-Type:          Simple

Source-repository head
  type:                git
  location:            https://github.com/bkomuves/ola-dmx

Flag WithHTTP
  Description:         build with HTTP api
  Manual:              True
  Default:             False

Flag WithLights
  Description:         build with example lights
  Manual:              True
  Default:             True

Library
  Build-Depends:       base >= 4 && < 5

  Exposed-Modules:     DMX.OLA.Native
                       DMX.Common

  if flag(WithLights)
    Exposed-Modules:     DMX.Lights.KintaMini
                         DMX.Lights.MiniDekker
                         DMX.Lights.LedStrob200

  if flag(WithHTTP)
    Build-Depends:       base >= 4 && < 5, HTTP >= 4000
    Exposed-Modules:     DMX.OLA.REST
                           
  Extensions:          ForeignFunctionInterface, CPP, BangPatterns, TypeSynonymInstances

  Hs-Source-Dirs:      .
  ghc-options:         -threaded 
  
  cc-options:          -x c++
  c-sources:           cbits/cpp_ola.cpp
  extra-libraries:     stdc++

  pkgconfig-depends:   libola
